Fix overflow x

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,6 +26,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--dark);
   color: white;
+  overflow-x: hidden;
 }
 
 .Title {
